--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "dependencies": {
+    "@google/genai": "^1.33.0",
     "@google/generative-ai": "^0.24.1",
     "body-parser": "^2.2.1",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "firebase-admin": "^13.6.0"
   }
 }
